atualizado o link entre a pagina de contato

--- a/cafe_sonhos_index.html
+++ b/cafe_sonhos_index.html
@@ -10,7 +10,7 @@
   <h1 class="fundo-parcial">Café dos Sonhos</h1>
   <p>Bem-vindo ao lugar onde o aroma do café encontra a tranquilidade.</p>
   <a href="sobre.html" class="botao">Sobre o Café</a>
-  <a href="contato.html" class="botao">Contato</a>
+  <a href="cafe_sonhos_contato.html" class="botao">Contato</a>
 
 </body>
 
