atualiza são do link entre a pagina sobre a loja

--- a/cafe_sonhos_index.html
+++ b/cafe_sonhos_index.html
@@ -9,7 +9,7 @@
 
   <h1 class="fundo-parcial">Café dos Sonhos</h1>
   <p>Bem-vindo ao lugar onde o aroma do café encontra a tranquilidade.</p>
-  <a href="sobre.html" class="botao">Sobre o Café</a>
+  <a href="cafe_sonhos_sobre.html" class="botao">Sobre o Café</a>
   <a href="cafe_sonhos_contato.html" class="botao">Contato</a>
 
 </body>
