--- a/cafe_sonhos_index.html
+++ b/cafe_sonhos_index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Café dos Sonhos - Início</title>
+    <link rel="stylesheet" href="estilo_das_paginas_Cafe.css">
 </head>
 
 <body>
