--- a/cafe_sonhos_sobre.html
+++ b/cafe_sonhos_sobre.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Café dos Sonhos - Sobre</title>
+  <link rel="stylesheet" href="estilo_das_paginas_Cafe.css">
 </head>
 
 <body>
